fix: hide scrollbar in brands

--- a/assets/amarena.scss
+++ b/assets/amarena.scss
@@ -161,12 +161,13 @@ a:hover {
   animation-name: moveme;
   animation-duration: 15s;
   animation-timing-function: ease-out;
-  overflow: hidden;
+  overflow: scroll;
+  scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
-  scrollbar-width: none;  /* Firefox */
 }
-.moveme::-webkit-scrollbar { 
-    display: none;  /* Safari and Chrome */
+.moveme::-webkit-scrollbar { /* Safari and Chrome */
+  width: 0;
+  height: 0;  
 }
 
 .brandrow {
